--- a/website/companions/amy-pond.html
+++ b/website/companions/amy-pond.html
@@ -11,15 +11,16 @@
 		<!-- InstanceParam name="Companions Secondary Menu" type="boolean" value="true" -->
 		<!-- InstanceParam name="Villians Secondary Menu" type="boolean" value="false" -->
 		<!-- InstanceParam name="Villains Secondary Menu" type="boolean" value="false" -->
+		<link href="../styles.css" rel="stylesheet" type="text/css">
 	</head>
 	
 	<body>
 		<table>
 			<tr>
-				<td colspan="2">[Primary Navigation]</td>
+				<td colspan="2"><a href="../">Home</a>, <a href="../the-doctors/">The Doctors,</a> <a href="../companions/">Companions, </a><a href="../villains/">Villains </a></td>
 			</tr>
 			<tr>
-				<td colspan="2">[Banner]</td>
+				<td colspan="2"><!-- InstanceBeginEditable name="Banner" --><img src="../images/banner-companions.jpg" width="950" height="150"><!-- InstanceEndEditable --></td>
 			</tr>
 			<tr>
 				<td height="673">
@@ -50,11 +51,16 @@
 						</tr>
 					</table>
 					 </td>
-				<td><!-- InstanceBeginEditable name="Content Area" -->
+				<td>
+				<div class="doctor-who-content">
+				<!-- InstanceBeginEditable name="Content Area" -->
 					<p>Amelia Jessica &quot;Amy&quot; Pond is a fictional character portrayed by Karen Gillan in the long-running British science fiction television series Doctor Who. </p>
 					<p>Amy is a companion of the series protagonist the Doctor, in his eleventh incarnation, played by Matt Smith. She appears in the programme from the fifth series (2010) to midway through theseventh series (2012).</p>
 					<p>he Doctor first meets Amelia when she is seven years old and disturbed by a crack in her wall. He promises to return to the lonely girl in 5 minutes and take her with him in his time and space machine the TARDIS, but accidentally arrives twelve years later, by which time Amy has become cynical about her &quot;imaginary friend&quot;.</p>
-				<!-- InstanceEndEditable --></td>
+				<!-- InstanceEndEditable -->
+				</div>
+				</td>
+				
 			</tr>
 		</table>
 	</body>
