--- a/website/companions/martha-jones.html
+++ b/website/companions/martha-jones.html
@@ -11,15 +11,16 @@
 		<!-- InstanceParam name="Companions Secondary Menu" type="boolean" value="true" -->
 		<!-- InstanceParam name="Villians Secondary Menu" type="boolean" value="false" -->
 		<!-- InstanceParam name="Villains Secondary Menu" type="boolean" value="false" -->
+		<link href="../styles.css" rel="stylesheet" type="text/css">
 	</head>
 	
 	<body>
 		<table>
 			<tr>
-				<td colspan="2">[Primary Navigation]</td>
+				<td colspan="2"><a href="../">Home</a>, <a href="../the-doctors/">The Doctors,</a> <a href="../companions/">Companions, </a><a href="../villains/">Villains </a></td>
 			</tr>
 			<tr>
-				<td colspan="2">[Banner]</td>
+				<td colspan="2"><!-- InstanceBeginEditable name="Banner" --><img src="../images/banner-companions.jpg" width="950" height="150"><!-- InstanceEndEditable --></td>
 			</tr>
 			<tr>
 				<td height="673">
@@ -50,11 +51,17 @@
 						</tr>
 					</table>
 					 </td>
-				<td><!-- InstanceBeginEditable name="Content Area" -->
+				<td>
+				<div class="doctor-who-content">
+				<!-- InstanceBeginEditable name="Content Area" -->
+					<h1>The Companions</h1>
 					<p>Martha Jones is a fictional character played by Freema Agyeman in the long-running British science fiction televisionseries Doctor Who and its spin-off series, Torchwood. She is a companion of the Tenth Doctor in Doctor Who, replacing Rose Tyler (Billie Piper).</p>
 					<p>According to the character's creator and executive producer Russell T Davies in his non-fiction book Doctor Who: The Writer's Tale, the character was developed from the beginning with the intention of appearing for a whole of the 2007 series, and to later make guest appearances in subsequent series and crossoverappearances in the show's two spin-offs; Martha subsequently made guest appearances in Torchwood series two and in Doctor Who series four in 2008 and special episode The End of Time in 2010. Martha was also intended to make guest appearances in the 2009 series of Torchwood and The Sarah Jane Adventures, but could not due to the actress' other obligations.[1]</p>
 					<p>Within the series' narrative, Martha begins as a medical student who becomes the Doctor's time travelling companion after an incident at the hospital where she works. After well over a year (from the perspective of the Doctor and herself) of service at the Doctor's side, Martha parts from the Doctor's company as she cannot bear her own unrequited love for him. </p>
-				<!-- InstanceEndEditable --></td>
+				<!-- InstanceEndEditable -->
+				</div>
+				</td>
+				
 			</tr>
 		</table>
 	</body>
