--- a/website/the-doctors/the-tenth-doctor.html
+++ b/website/the-doctors/the-tenth-doctor.html
@@ -11,15 +11,16 @@
 		<!-- InstanceParam name="Companions Secondary Menu" type="boolean" value="true" -->
 		<!-- InstanceParam name="Villians Secondary Menu" type="boolean" value="false" -->
 		<!-- InstanceParam name="Villains Secondary Menu" type="boolean" value="false" -->
+		<link href="../styles.css" rel="stylesheet" type="text/css">
 	</head>
 	
 	<body>
 		<table>
 			<tr>
-				<td colspan="2">[Primary Navigation]</td>
+				<td colspan="2"><a href="../">Home</a>, <a href="../the-doctors/">The Doctors,</a> <a href="../companions/">Companions, </a><a href="../villains/">Villains </a></td>
 			</tr>
 			<tr>
-				<td colspan="2">[Banner]</td>
+				<td colspan="2"><!-- InstanceBeginEditable name="Banner" --><img src="../images/banners/banner-doctors.jpg" width="950" height="150"><!-- InstanceEndEditable --></td>
 			</tr>
 			<tr>
 				<td height="673">
@@ -50,11 +51,17 @@
 						</tr>
 					</table>
 					 </td>
-				<td><!-- InstanceBeginEditable name="Content Area" -->
+				<td>
+				<div class="doctor-who-content">
+				<!-- InstanceBeginEditable name="Content Area" -->
+					<h1>The Doctors</h1>
 					<p>The Tenth Doctor is the tenth incarnation of the protagonist of the long-running BBC television science fiction seriesDoctor Who. He is played by David Tennant, who appears in three series as well as eight specials.</p>
 					<p>In the series' narrative, the Doctor is a centuries-old Time Lord alien from the planet Gallifrey who travels in time in hisTARDIS, frequently with companions. When the Doctor is critically injured, he can regenerate his body; in doing so, his physical appearance and personality change.</p>
 					<p>ennant portrays the tenth such incarnation. This incarnation's companions have included working class shop assistant Rose Tyler (Billie Piper), medical student Martha Jones (Freema Agyeman) and fiery temp worker Donna Noble (Catherine Tate); he eventually parts ways with them all by the end of the 2008 series finale, &quot;Journey's End&quot;, after which he attempted to travel alone for the duration of the 2008–10 specials.</p>
-				<!-- InstanceEndEditable --></td>
+				<!-- InstanceEndEditable -->
+				</div>
+				</td>
+				
 			</tr>
 		</table>
 	</body>
