--- a/website/villains/lady-cassandra.html
+++ b/website/villains/lady-cassandra.html
@@ -11,15 +11,16 @@
 		<!-- InstanceParam name="Companions Secondary Menu" type="boolean" value="false" -->
 		<!-- InstanceParam name="Villians Secondary Menu" type="boolean" value="false" -->
 		<!-- InstanceParam name="Villains Secondary Menu" type="boolean" value="true" -->
+		<link href="../styles.css" rel="stylesheet" type="text/css">
 	</head>
 	
 	<body>
 		<table>
 			<tr>
-				<td colspan="2">[Primary Navigation]</td>
+				<td colspan="2"><a href="../">Home</a>, <a href="../the-doctors/">The Doctors,</a> <a href="../companions/">Companions, </a><a href="../villains/">Villains </a></td>
 			</tr>
 			<tr>
-				<td colspan="2">[Banner]</td>
+				<td colspan="2"><!-- InstanceBeginEditable name="Banner" -->Banners<!-- InstanceEndEditable --></td>
 			</tr>
 			<tr>
 				<td height="673">
@@ -43,12 +44,17 @@
 							<td><a href="weeping-angels.html">Weeping Angels</a></td>
 						</tr>
 					</table>
-			    </td>
-				<td><!-- InstanceBeginEditable name="Content Area" -->
+					 </td>
+				<td>
+				<div class="doctor-who-content">
+				<!-- InstanceBeginEditable name="Content Area" -->
 					<p>Lady Cassandra O'Brien.?17 is a fictional character from the long-running British science fiction television seriesDoctor Who. The character was voiced by Zoë Wanamaker, and was largely computer-generated,[1] although a physical prop was also used on set.</p>
 					<p>The Ninth Doctor first encountered Cassandra (Lady Cassandra O'Brien.?17) in the episode &quot;The End of the World&quot;. They, along with the rich and powerful of the universe, were on Platform One, a space station orbiting Earth five billion years in the future, which was set up to witness the final destruction of the planet by the expansion of the Sun.</p>
 					<p>ccording to Cassandra, her parents were the last to be buried &quot;in its soil&quot;. She had been born on Earth and lived on the edge of the &quot;Los Angeles Crevasse&quot;. Cassandra referred to herself as being &quot;a boy&quot; during this time. This could imply she was transgender; however, it may also be possible that the term &quot;boy&quot; in the contemporary vernacular may have lost its gender significance and come to mean simply &quot;child&quot;. Married several times, her life had been extended through a series of 708 plastic surgery operations, until she was nothing but a piece of skin stretched onto a frame, with eyes and a mouth, connected to a brain in a designer jar filled with a preserving solution below.</p>
-				<!-- InstanceEndEditable --></td>
+				<!-- InstanceEndEditable -->
+				</div>
+				</td>
+				
 			</tr>
 		</table>
 	</body>
