--- a/website/companions/jack-harkness.html
+++ b/website/companions/jack-harkness.html
@@ -11,15 +11,16 @@
 		<!-- InstanceParam name="Companions Secondary Menu" type="boolean" value="true" -->
 		<!-- InstanceParam name="Villians Secondary Menu" type="boolean" value="false" -->
 		<!-- InstanceParam name="Villains Secondary Menu" type="boolean" value="false" -->
+		<link href="../styles.css" rel="stylesheet" type="text/css">
 	</head>
 	
 	<body>
 		<table>
 			<tr>
-				<td colspan="2">[Primary Navigation]</td>
+				<td colspan="2"><a href="../">Home</a>, <a href="../the-doctors/">The Doctors,</a> <a href="../companions/">Companions, </a><a href="../villains/">Villains </a></td>
 			</tr>
 			<tr>
-				<td colspan="2">[Banner]</td>
+				<td colspan="2"><!-- InstanceBeginEditable name="Banner" --><img src="../images/banner-companions.jpg" width="950" height="150"><!-- InstanceEndEditable --></td>
 			</tr>
 			<tr>
 				<td height="673">
@@ -50,11 +51,17 @@
 						</tr>
 					</table>
 					 </td>
-				<td><!-- InstanceBeginEditable name="Content Area" -->
+				<td>
+				<div class="doctor-who-content">
+				<!-- InstanceBeginEditable name="Content Area" -->
+					<h1>The Companions</h1>
 					<p>Captain Jack Harkness is a fictional character played by John Barrowman in Doctor Who and its spin-off series,Torchwood. He first appeared in the 2005 Doctor Who episode &quot;The Empty Child&quot; and reappeared in the remaining episodes of the 2005 series as a companion of the ninth incarnation of the series' protagonist the Doctor. </p>
 					<p>Jack became the central character in the adult-themed Torchwood, and returned in the 2007 series of Doctor Who, reuniting with thetenth incarnation of the Doctor, and again for the 2008 series and a 2010 special.</p>
 					<p>In the program's narrative, Jack begins as a time traveler and former con man from the 51st century. In contrast to the Doctor, Jack is a man of action, more willing to apply a hands-on solution to a problem. As a consequence of his death and resurrection in the 2005 series finale of Doctor Who, the character gains immortality. On Earth, Jack becomes a member of Torchwood, a British organization dedicated to combating alien threats, becoming its leader over a century later. An ambiguous backstory is gradually revealed in the course of both series, adding another layer of complexity to the character.</p>
-				<!-- InstanceEndEditable --></td>
+				<!-- InstanceEndEditable -->
+				</div>
+				</td>
+				
 			</tr>
 		</table>
 	</body>
