--- a/website/companions/river-song.html
+++ b/website/companions/river-song.html
@@ -11,15 +11,16 @@
 		<!-- InstanceParam name="Companions Secondary Menu" type="boolean" value="true" -->
 		<!-- InstanceParam name="Villians Secondary Menu" type="boolean" value="false" -->
 		<!-- InstanceParam name="Villains Secondary Menu" type="boolean" value="false" -->
+		<link href="../styles.css" rel="stylesheet" type="text/css">
 	</head>
 	
 	<body>
 		<table>
 			<tr>
-				<td colspan="2">[Primary Navigation]</td>
+				<td colspan="2"><a href="../">Home</a>, <a href="../the-doctors/">The Doctors,</a> <a href="../companions/">Companions, </a><a href="../villains/">Villains </a></td>
 			</tr>
 			<tr>
-				<td colspan="2">[Banner]</td>
+				<td colspan="2"><!-- InstanceBeginEditable name="Banner" --><img src="../images/banner-companions.jpg" width="950" height="150"><!-- InstanceEndEditable --></td>
 			</tr>
 			<tr>
 				<td height="673">
@@ -50,11 +51,17 @@
 						</tr>
 					</table>
 					 </td>
-				<td><!-- InstanceBeginEditable name="Content Area" -->
+				<td>
+				<div class="doctor-who-content">
+				<!-- InstanceBeginEditable name="Content Area" -->
+					<h1>The Companions</h1>
 					<p>River Song is a fictional character created by Steven Moffat and played by Alex Kingston in the British science-fictionseries Doctor Who.</p>
 					<p>River Song was introduced to the series as an experienced future companion of series protagonist the Doctor, an alien Time Lord who travels through time in his TARDIS. Because River Song is a time traveller herself, her adventures with the Doctor occur out of synchronisation; their first meeting (from the audience's perspective) is his first and apparently her last. In later appearances, River is a companion of the Doctor in his eleventh incarnation, portrayed by Matt Smith. River Song was created by Doctor Who writer Steven Moffat for the show's fourth series in 2008, under the tenure of executive producer Russell T Davies.</p>
 					<p>When the character was first introduced, much about her origins remained a mystery. Following the character's initial appearance, Davies had described her as &quot;one of the most important characters&quot; in the narrative, and &quot;vital&quot; to the Doctor's life.[3] In series six (2011), Moffat's episodes unveil more about the character. Born Melody Pond, River is the daughter of the Eleventh Doctor's companions Amy Pond (Karen Gillan) and Rory Williams (Arthur Darvill), alongside whom Kingston had appeared several times in series five (2010). Having been conceived on board the TARDIS as it travelled through the space-time vortex, Melody is born with genetic traits and abilities similar to the Doctor's own race, the Time Lords.</p>
-				<!-- InstanceEndEditable --></td>
+				<!-- InstanceEndEditable -->
+				</div>
+				</td>
+				
 			</tr>
 		</table>
 	</body>
