--- a/website/companions/rose-tyler.html
+++ b/website/companions/rose-tyler.html
@@ -11,15 +11,16 @@
 		<!-- InstanceParam name="Companions Secondary Menu" type="boolean" value="true" -->
 		<!-- InstanceParam name="Villians Secondary Menu" type="boolean" value="false" -->
 		<!-- InstanceParam name="Villains Secondary Menu" type="boolean" value="false" -->
+		<link href="../styles.css" rel="stylesheet" type="text/css">
 	</head>
 	
 	<body>
 		<table>
 			<tr>
-				<td colspan="2">[Primary Navigation]</td>
+				<td colspan="2"><a href="../">Home</a>, <a href="../the-doctors/">The Doctors,</a> <a href="../companions/">Companions, </a><a href="../villains/">Villains </a></td>
 			</tr>
 			<tr>
-				<td colspan="2">[Banner]</td>
+				<td colspan="2"><!-- InstanceBeginEditable name="Banner" --><img src="../images/banner-companions.jpg" width="950" height="150"><!-- InstanceEndEditable --></td>
 			</tr>
 			<tr>
 				<td height="673">
@@ -50,11 +51,17 @@
 						</tr>
 					</table>
 					 </td>
-				<td><!-- InstanceBeginEditable name="Content Area" -->
+				<td>
+				<div class="doctor-who-content">
+				<!-- InstanceBeginEditable name="Content Area" -->
+					<h1>The Companions</h1>
 					<p>Rose Tyler is a fictional character portrayed by Billie Piper in the long-running British science fiction television seriesDoctor Who, and was created by series producer Russell T Davies.</p>
 					<p>With the revival of Doctor Who in 2005, Rose was introduced in the eponymous series one premiere as a new companion of series protagonist the Doctor, in his ninthand tenth incarnations. The companion character, intended to act as an audience surrogate, was key in the first series more so than any other to introduce new viewers to Doctor Who, which had not aired regularly since 1989. The series saw Billie Piper receive top billing alongside Christopher Eccleston and David Tennant, both of whom portrayed the Doctor. A regular companion of the Doctor for all of series one and series two, Rose also returned in the programme'sfourth series having developed into a harder character.</p>
 					<p>In the series' narrative, Rose is introduced as a 19-year-old working class shop assistant from London, alongside her own supporting cast in the form of her mother Jackie Tyler (Camille Coduri) and her boyfriend Mickey Smith (Noel Clarke). Over the course of the first series Rose's human actions and responses contrast with the Doctor's alien perspectives. He comes to value and depend on her and sacrifices his Ninth incarnation for her. </p>
-				<!-- InstanceEndEditable --></td>
+				<!-- InstanceEndEditable -->
+				</div>
+				</td>
+				
 			</tr>
 		</table>
 	</body>
