--- a/website/the-doctors/the-eighth-doctor.html
+++ b/website/the-doctors/the-eighth-doctor.html
@@ -11,15 +11,16 @@
 		<!-- InstanceParam name="Companions Secondary Menu" type="boolean" value="false" -->
 		<!-- InstanceParam name="Villians Secondary Menu" type="boolean" value="false" -->
 		<!-- InstanceParam name="Villains Secondary Menu" type="boolean" value="false" -->
+		<link href="../styles.css" rel="stylesheet" type="text/css">
 	</head>
 	
 	<body>
 		<table>
 			<tr>
-				<td colspan="2">[Primary Navigation]</td>
+				<td colspan="2"><a href="../">Home</a>, <a href="../the-doctors/">The Doctors,</a> <a href="../companions/">Companions, </a><a href="../villains/">Villains </a></td>
 			</tr>
 			<tr>
-				<td colspan="2">[Banner]</td>
+				<td colspan="2"><!-- InstanceBeginEditable name="Banner" --><img src="../images/banners/banner-doctors.jpg" width="950" height="150"><!-- InstanceEndEditable --></td>
 			</tr>
 			<tr>
 				<td height="673">
@@ -64,11 +65,17 @@
 						</tr>
 					</table>
 					 </td>
-				<td><!-- InstanceBeginEditable name="Content Area" -->
+				<td>
+				<div class="doctor-who-content">
+				<!-- InstanceBeginEditable name="Content Area" -->
+					<h1>The Doctors</h1>
 					<p>The Eighth Doctor is the eighth incarnation of the protagonist of the long-running BBC television science fiction seriesDoctor Who. He was portrayed by Paul McGann. Though he only appeared on television in one TV film, his adventures are extensively portrayed in other media.</p>
 					<p>Within the series' narrative, the Doctor is a centuries-old alien, a Time Lord from the planet Gallifrey, who travels in time and space in his TARDIS, frequently with companions.</p>
 					<p>When the Doctor is critically injured, he can regenerate his body but in doing so gains a new physical appearance and with it, a distinct new personality. McGann portrays the eighth such incarnation, a passionate, enthusiastic, and eccentric character. His only companion in the television movie is Grace Holloway (Daphne Ashbrook), a medical doctor whose surgery is responsible for triggering his regeneration.</p>
-				<!-- InstanceEndEditable --></td>
+				<!-- InstanceEndEditable -->
+				</div>
+				</td>
+				
 			</tr>
 		</table>
 	</body>
