--- a/website/the-doctors/the-first-doctor.html
+++ b/website/the-doctors/the-first-doctor.html
@@ -11,15 +11,16 @@
 		<!-- InstanceParam name="Companions Secondary Menu" type="boolean" value="false" -->
 		<!-- InstanceParam name="Villians Secondary Menu" type="boolean" value="false" -->
 		<!-- InstanceParam name="Villains Secondary Menu" type="boolean" value="false" -->
+		<link href="../styles.css" rel="stylesheet" type="text/css">
 	</head>
 	
 	<body>
 		<table>
 			<tr>
-				<td colspan="2">[Primary Navigation]</td>
+				<td colspan="2"><a href="../">Home</a>, <a href="../the-doctors/">The Doctors,</a> <a href="../companions/">Companions, </a><a href="../villains/">Villains </a></td>
 			</tr>
 			<tr>
-				<td colspan="2">[Banner]</td>
+				<td colspan="2"><!-- InstanceBeginEditable name="Banner" --><img src="../images/banners/banner-doctors.jpg" width="950" height="150"><!-- InstanceEndEditable --></td>
 			</tr>
 			<tr>
 				<td height="673">
@@ -64,12 +65,20 @@
 						</tr>
 					</table>
 					 </td>
-				<td><!-- InstanceBeginEditable name="Content Area" -->
+				<td>
+				<div class="doctor-who-content">
+				<!-- InstanceBeginEditable name="Content Area" -->
+    	<h1>The First Doctor</h1>
+    	<h2>William Hartnell</h2>
+    	<p><img src="../images/the-doctors/the-first-doctor.jpg" width="300" height="300"></p>
     	<p>The First Doctor is the initial incarnation of the protagonist of the long-running BBC television science fiction series Doctor Who. He was portrayed by the actor William Hartnell from 1963 to 1966.</p>
     	<p>Within the series' narrative, the Doctor is a centuries-old alien Time Lord from the planet Gallifrey who travels in time and space in his TARDIS, frequently with companions. When the Doctor is critically injured, he can regenerate his body; in doing so, his physical appearance and personality change.</p>
     	<p>The First Doctor is the youngest incarnation of the Doctor, but has the most aged physical appearance, having grown old through a natural lifespan. <br>
     		</p>
-    			<!-- InstanceEndEditable --></td>
+    			<!-- InstanceEndEditable -->
+				</div>
+				</td>
+				
 			</tr>
 		</table>
 	</body>
