--- a/website/the-doctors/the-third-doctor.html
+++ b/website/the-doctors/the-third-doctor.html
@@ -11,15 +11,16 @@
 		<!-- InstanceParam name="Companions Secondary Menu" type="boolean" value="false" -->
 		<!-- InstanceParam name="Villians Secondary Menu" type="boolean" value="false" -->
 		<!-- InstanceParam name="Villains Secondary Menu" type="boolean" value="false" -->
+		<link href="../styles.css" rel="stylesheet" type="text/css">
 	</head>
 	
 	<body>
 		<table>
 			<tr>
-				<td colspan="2">[Primary Navigation]</td>
+				<td colspan="2"><a href="../">Home</a>, <a href="../the-doctors/">The Doctors,</a> <a href="../companions/">Companions, </a><a href="../villains/">Villains </a></td>
 			</tr>
 			<tr>
-				<td colspan="2">[Banner]</td>
+				<td colspan="2"><!-- InstanceBeginEditable name="Banner" --><img src="../images/banners/banner-doctors.jpg" width="950" height="150"><!-- InstanceEndEditable --></td>
 			</tr>
 			<tr>
 				<td height="673">
@@ -64,11 +65,17 @@
 						</tr>
 					</table>
 					 </td>
-				<td><!-- InstanceBeginEditable name="Content Area" -->
+				<td>
+				<div class="doctor-who-content">
+				<!-- InstanceBeginEditable name="Content Area" -->
+    	<h1>The Doctors</h1>
     	<p>The Third Doctor is the third incarnation of the protagonist of the long-running BBC television science fiction series Doctor Who. He was portrayed by actor Jon Pertwee.</p>
     	<p>Within the series' narrative, the Doctor is a centuries-old Time Lord alien from the planet Gallifrey who travels in time and space in his TARDIS, frequently with companions. When the Doctor is critically injured, his body can regenerate; as a result, his physical appearance and personality change. Pertwee portrays the third such incarnation, a dapper man of action of stark contrast to his wily but less action-oriented predecessors.</p>
     	<p>His adventures often fitted into the spy-fi genre which had been popularised by The Avengers the decade prior. Within the story, the Third Doctor came into existence as part of a punishment from his own race, the Time Lords, who forced him to regenerate and also disabled his TARDIS. </p>
-    			<!-- InstanceEndEditable --></td>
+    			<!-- InstanceEndEditable -->
+				</div>
+				</td>
+				
 			</tr>
 		</table>
 	</body>
