--- a/website/the-doctors/the-twelfth-doctor.html
+++ b/website/the-doctors/the-twelfth-doctor.html
@@ -11,15 +11,16 @@
 		<!-- InstanceParam name="Companions Secondary Menu" type="boolean" value="false" -->
 		<!-- InstanceParam name="Villians Secondary Menu" type="boolean" value="false" -->
 		<!-- InstanceParam name="Villains Secondary Menu" type="boolean" value="false" -->
+		<link href="../styles.css" rel="stylesheet" type="text/css">
 	</head>
 	
 	<body>
 		<table>
 			<tr>
-				<td colspan="2">[Primary Navigation]</td>
+				<td colspan="2"><a href="../">Home</a>, <a href="../the-doctors/">The Doctors,</a> <a href="../companions/">Companions, </a><a href="../villains/">Villains </a></td>
 			</tr>
 			<tr>
-				<td colspan="2">[Banner]</td>
+				<td colspan="2"><!-- InstanceBeginEditable name="Banner" --><img src="../images/banners/banner-doctors.jpg" width="950" height="150"><!-- InstanceEndEditable --></td>
 			</tr>
 			<tr>
 				<td height="673">
@@ -64,11 +65,17 @@
 						</tr>
 					</table>
 					 </td>
-				<td><!-- InstanceBeginEditable name="Content Area" -->
+				<td>
+				<div class="doctor-who-content">
+				<!-- InstanceBeginEditable name="Content Area" -->
+					<h1>The Doctors</h1>
 					<p>The Twelfth Doctor is to be the twelfth incarnation of the protagonist of the long-running BBC television science fictionseries Doctor Who.</p>
 					<p>He is to be portrayed by Peter Capaldi[1] following the departure of Matt Smith's incarnation in the 2013 Christmas special.[2] Within the series' narrative, the Doctor is a time travelling, humanoid alien from a race known as theTime Lords. When the Doctor is critically injured, he can regenerate his body but in doing so gains a new physical appearance and with it, a distinct new personality.</p>
 					<p>Capaldi will make his first appearance as the Doctor in the 2013 Christmas special episode.[3] He will be accompanied in the eighth series by incumbent companion Clara Oswald (Jenna Coleman).</p>
-				<!-- InstanceEndEditable --></td>
+				<!-- InstanceEndEditable -->
+				</div>
+				</td>
+				
 			</tr>
 		</table>
 	</body>
