--- a/website/villains/index.html
+++ b/website/villains/index.html
@@ -11,19 +11,25 @@
 		<!-- InstanceParam name="Companions Secondary Menu" type="boolean" value="false" -->
 		<!-- InstanceParam name="Villians Secondary Menu" type="boolean" value="true" -->
 		<!-- InstanceParam name="Villains Secondary Menu" type="boolean" value="false" -->
+		<link href="../styles.css" rel="stylesheet" type="text/css">
 	</head>
 	
 	<body>
 		<table>
 			<tr>
-				<td colspan="2">[Primary Navigation]</td>
+				<td colspan="2"><a href="../">Home</a>, <a href="../the-doctors/">The Doctors,</a> <a href="../companions/">Companions, </a><a href="../villains/">Villains </a></td>
 			</tr>
 			<tr>
-				<td colspan="2">[Banner]</td>
+				<td colspan="2"><!-- InstanceBeginEditable name="Banner" -->Banners<!-- InstanceEndEditable --></td>
 			</tr>
 			<tr>
 				<td height="673"> </td>
-				<td><!-- InstanceBeginEditable name="Content Area" -->[Content]<!-- InstanceEndEditable --></td>
+				<td>
+				<div class="doctor-who-content">
+				<!-- InstanceBeginEditable name="Content Area" -->[Content]<!-- InstanceEndEditable -->
+				</div>
+				</td>
+				
 			</tr>
 		</table>
 	</body>
