Pictures of the whole web

--- a/website/index.html
+++ b/website/index.html
@@ -17,16 +17,18 @@
 	<body>
 		<table>
 			<tr>
-				<td colspan="2"><a href="../">Home</a>, <a href="the-doctors/">The Doctors,</a> <a href="companions/">Companions, </a><a href="villains/">Villains </a></td>
+				<td colspan="2"><a href="index.html">Home,</a> <a href="the-doctors/">The Doctors,</a> <a href="companions/">Companions, </a><a href="villains/">Villains </a></td>
 			</tr>
 			<tr>
-				<td colspan="2"><!-- InstanceBeginEditable name="Banner" -->Banners<!-- InstanceEndEditable --></td>
+				<td colspan="2"><!-- InstanceBeginEditable name="Banner" --><img src="images/banners/banner-home.jpg" width="950" height="150"><!-- InstanceEndEditable --></td>
 			</tr>
 			<tr>
 				<td height="673"> </td>
 				<td>
 				<div class="doctor-who-content">
-				<!-- InstanceBeginEditable name="Content Area" -->[Content]<!-- InstanceEndEditable -->
+				<!-- InstanceBeginEditable name="Content Area" -->
+				<h1>Welcome to The Doctor Who Site </h1>
+				<!-- InstanceEndEditable -->
 				</div>
 				</td>
 				
