--- a/website/companions/index.html
+++ b/website/companions/index.html
@@ -17,10 +17,10 @@
 	<body>
 		<table>
 			<tr>
-				<td colspan="2"><a href="../">Home</a>, <a href="../the-doctors/">The Doctors,</a> <a href="../companions/">Companions, </a><a href="../villains/">Villains </a></td>
+				<td colspan="2"><a href="../index.html">Home,</a> <a href="../the-doctors/">The Doctors,</a> <a href="../companions/">Companions, </a><a href="../villains/">Villains </a></td>
 			</tr>
 			<tr>
-				<td colspan="2"><!-- InstanceBeginEditable name="Banner" -->					<img src="../images/banner-companions.jpg" width="950" height="150">				<!-- InstanceEndEditable --></td>
+				<td colspan="2"><!-- InstanceBeginEditable name="Banner" -->					<img src="../images/banner-companions.jpg" width="950" height="150"><img src="../images/banners/banner-companions.jpg" width="950" height="150"><!-- InstanceEndEditable --></td>
 			</tr>
 			<tr>
 				<td height="673">
