--- a/website/the-doctors/index.html
+++ b/website/the-doctors/index.html
@@ -17,7 +17,7 @@
 	<body>
 		<table>
 			<tr>
-				<td colspan="2"><a href="../">Home</a>, <a href="../the-doctors/">The Doctors,</a> <a href="../companions/">Companions, </a><a href="../villains/">Villains </a></td>
+				<td colspan="2"><a href="../index.html">Home,</a> <a href="../the-doctors/">The Doctors,</a> <a href="../companions/">Companions, </a><a href="../villains/">Villains </a></td>
 			</tr>
 			<tr>
 				<td colspan="2"><!-- InstanceBeginEditable name="Banner" --><img src="../images/banners/banner-doctors.jpg" width="950" height="150"><!-- InstanceEndEditable --></td>
@@ -67,7 +67,9 @@
 					 </td>
 				<td>
 				<div class="doctor-who-content">
-				<!-- InstanceBeginEditable name="Content Area" --><!-- InstanceEndEditable -->
+				<!-- InstanceBeginEditable name="Content Area" -->
+				<h1>The Doctors</h1>
+				<!-- InstanceEndEditable -->
 				</div>
 				</td>
 				
