--- a/website/the-doctors/the-fifth-doctor.html
+++ b/website/the-doctors/the-fifth-doctor.html
@@ -17,7 +17,7 @@
 	<body>
 		<table>
 			<tr>
-				<td colspan="2"><a href="../">Home</a>, <a href="../the-doctors/">The Doctors,</a> <a href="../companions/">Companions, </a><a href="../villains/">Villains </a></td>
+				<td colspan="2"><a href="../index.html">Home,</a> <a href="../the-doctors/">The Doctors,</a> <a href="../companions/">Companions, </a><a href="../villains/">Villains </a></td>
 			</tr>
 			<tr>
 				<td colspan="2"><!-- InstanceBeginEditable name="Banner" --><img src="../images/banners/banner-doctors.jpg" width="950" height="150"><!-- InstanceEndEditable --></td>
@@ -68,9 +68,11 @@
 				<td>
 				<div class="doctor-who-content">
 				<!-- InstanceBeginEditable name="Content Area" -->
-    	<h1>The Doctors</h1>
+    	<h1>The Fifth Doctor</h1>
+    	<h2>Peter Davison</h2>
+    	<h2><img src="../images/the-doctors/the-fifth-doctor.jpg" width="300" height="300"></h2>
     	<p>The Fifth Doctor is the fifth incarnation of the protagonist of the long-running BBC television science fiction series Doctor Who. He is portrayed by Peter Davison.</p>
-    	<p>Within the series' narrative, the Doctor is a centuries-old Time Lord alien from the planet Gallifrey who travels in time and space in his TARDIS, frequently with companions. When the Doctor is critically injured, he can regenerate his body; in doing so, his physical appearance and personality change.</p>
+<p>Within the series' narrative, the Doctor is a centuries-old Time Lord alien from the planet Gallifrey who travels in time and space in his TARDIS, frequently with companions. When the Doctor is critically injured, he can regenerate his body; in doing so, his physical appearance and personality change.</p>
     	<p>avison portrays the fifth such incarnation, a staunch pacifist with a vulnerable side and a tendency towards indecisiveness, dressed as a boyish Edwardian cricketer. He travelled with a host of companions, including boy genius Adric (Matthew Waterhouse), alien aristocrat Nyssa (Sarah Sutton) and Australian flight attendant Tegan Jovanka (Janet Fielding), whom he had travelled alongside in his previous incarnation.</p>
     			<!-- InstanceEndEditable -->
 				</div>
