--- a/website/the-doctors/the-fourth-doctor.html
+++ b/website/the-doctors/the-fourth-doctor.html
@@ -17,7 +17,7 @@
 	<body>
 		<table>
 			<tr>
-				<td colspan="2"><a href="../">Home</a>, <a href="../the-doctors/">The Doctors,</a> <a href="../companions/">Companions, </a><a href="../villains/">Villains </a></td>
+				<td colspan="2"><a href="../index.html">Home,</a> <a href="../the-doctors/">The Doctors,</a> <a href="../companions/">Companions, </a><a href="../villains/">Villains </a></td>
 			</tr>
 			<tr>
 				<td colspan="2"><!-- InstanceBeginEditable name="Banner" --><img src="../images/banners/banner-doctors.jpg" width="950" height="150"><!-- InstanceEndEditable --></td>
@@ -68,9 +68,10 @@
 				<td>
 				<div class="doctor-who-content">
 				<!-- InstanceBeginEditable name="Content Area" -->
-    	<h1>The Doctors</h1>
-    	<p>The Fourth Doctor is the fourth incarnation of the protagonist of the long-running BBC television science fictionseries Doctor Who. He was portrayed by Tom Baker for seven consecutive seasons and remains the longest-lived incarnation of the Doctor in the show's on-screen history, counting both the classic and modern series.</p>
-    	<p>Within the series' narrative, the Doctor is a centuries-old Time Lord alien from the planet Gallifrey who travels in time and space in his TARDIS, frequently with companions. When the Doctor is critically injured, he can regenerate his body, changing his physical appearance and personality in the process.</p>
+    	<h1>The Fourth Doctor</h1>
+    	<h2>Tom Baker </h2>
+    	<p><img src="../images/the-doctors/the-fourth-doctor.jpg" width="300" height="300">The Fourth Doctor is the fourth incarnation of the protagonist of the long-running BBC television science fictionseries Doctor Who. He was portrayed by Tom Baker for seven consecutive seasons and remains the longest-lived incarnation of the Doctor in the show's on-screen history, counting both the classic and modern series.</p>
+<p>Within the series' narrative, the Doctor is a centuries-old Time Lord alien from the planet Gallifrey who travels in time and space in his TARDIS, frequently with companions. When the Doctor is critically injured, he can regenerate his body, changing his physical appearance and personality in the process.</p>
     	<p>Baker portrays the fourth such incarnation, a whimsical and sometimes brooding individual whose enormous personal warmth is at times tempered by his capacity for righteous anger. </p>
     			<!-- InstanceEndEditable -->
 				</div>
