--- a/website/the-doctors/the-seventh-doctor.html
+++ b/website/the-doctors/the-seventh-doctor.html
@@ -17,7 +17,7 @@
 	<body>
 		<table>
 			<tr>
-				<td colspan="2"><a href="../">Home</a>, <a href="../the-doctors/">The Doctors,</a> <a href="../companions/">Companions, </a><a href="../villains/">Villains </a></td>
+				<td colspan="2"><a href="../index.html">Home,</a> <a href="../the-doctors/">The Doctors,</a> <a href="../companions/">Companions, </a><a href="../villains/">Villains </a></td>
 			</tr>
 			<tr>
 				<td colspan="2"><!-- InstanceBeginEditable name="Banner" --><img src="../images/banners/banner-doctors.jpg" width="950" height="150"><!-- InstanceEndEditable --></td>
@@ -68,7 +68,9 @@
 				<td>
 				<div class="doctor-who-content">
 				<!-- InstanceBeginEditable name="Content Area" -->
-					<h1>The Doctors</h1>
+					<h1>The Seventh Doctor</h1>
+					<h2>Sylvester McCoy</h2>
+					<h2><img src="../images/the-doctors/the-seventh-doctor.jpg" width="300" height="300"></h2>
 					<p>The Seventh Doctor is the seventh incarnation of the protagonist of the long-running BBC television science fiction seriesDoctor Who. He was portrayed by the actor Sylvester McCoy.</p>
 					<p>Within the series' narrative, the Doctor is a centuries-old Time Lord alien from the planet Gallifrey who travels in time and space in his TARDIS, frequently with companions. When the Doctor is critically injured, he can regenerate his body; in doing so, his physical appearance and personality change.</p>
 					<p>McCoy portrays the seventh such incarnation, a whimsical, thoughtful character who quickly becomes more layered, secretive, and manipulative. His first companion was Melanie Bush (Bonnie Langford), a computer programmer who travelled with his previous incarnation, and who is soon succeeded by troubled teenager and explosives expert Ace (Sophie Aldred), who becomes his protégée.</p>
